--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "mandatory-todo-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://hkoskinen.github.io/mandatory-todo-app",
   "dependencies": {
+    "gh-pages": "^1.1.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4"
@@ -11,7 +13,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "uuid": "^3.2.1"
